adding docker nginx config for multi server domain

--- a/proxy/nginx(docker & with ssl)/nginx_multi_server.conf
+++ b/proxy/nginx(docker & with ssl)/nginx_multi_server.conf
@@ -1,5 +1,5 @@
 # Here it is a single domain server. With no other sub domain.
-# Here domain => https://example.com 
+# Here domain => https://example.com, https://api.example.com  
 # Proxy Node server domain => http://localhost:5000
 # Static image, documents file location => /usr/app/data
 # Static files html, css, javascript => /usr/app
@@ -32,17 +32,24 @@ http {
     tcp_nopush              on;
     sendfile_max_chunk      1m;
 
-    # SSL config
-    # ssl_ciphers is the methods to encrypt the data after tls.
-    # The ssl_protocols are the process of tls handshake.
-    ssl_certificate         /etc/letsencrypt/live/example.com/fullchain.pem;
-    ssl_certificate_key     /etc/letsencrypt/live/example.com/privkey.pem;
-    ssl_ciphers             EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
-    ssl_protocols           TLSv1.1 TLSv1.2 TLSv1.3;
-
     # Keep alive timeout for ssl certificate
     keepalive_timeout       75;       
 
+    # If 80 request redirect to 443
+    # Redirect to https if http
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name example.com;
+        return 301 https://example.com$request_uri;
+    }
+
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name api.example.com;
+        return 301 https://api.example.com$request_uri;
+    }
 
     server {
         # Here default_server means this server will be selected if other not get selected.
@@ -51,6 +58,13 @@ http {
         listen              [::]:443 ssl http2 default_server;
         server_name         example.com;
 
+        # SSL config
+        # ssl_ciphers is the methods to encrypt the data after tls.
+        # The ssl_protocols are the process of tls handshake.
+        ssl_certificate         /etc/letsencrypt/live/example.com/fullchain.pem;
+        ssl_certificate_key     /etc/letsencrypt/live/example.com/privkey.pem;
+        ssl_ciphers             EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
+        ssl_protocols           TLSv1.1 TLSv1.2 TLSv1.3;
 
         # Compression on => for the static files
         gzip                on;
@@ -65,6 +79,27 @@ http {
             index               index.html index.htm;
             try_files           $uri $uri/ /index.html;
         }
+    }
+
+    server {
+        # ssl with http2. http2 only works with ssl
+        listen              443 ssl http2;
+        listen              [::]:443 ssl http2;
+        server_name         api.example.com;
+
+        # SSL config
+        # ssl_ciphers is the methods to encrypt the data after tls.
+        # The ssl_protocols are the process of tls handshake.
+        ssl_certificate         /etc/letsencrypt/live/api.example.com/fullchain.pem;
+        ssl_certificate_key     /etc/letsencrypt/live/api.example.com/privkey.pem;
+        ssl_ciphers             EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
+        ssl_protocols           TLSv1.1 TLSv1.2 TLSv1.3;
+
+        # Compression on => for the static files
+        gzip                on;
+        gzip_comp_level     3;
+        gzip_types          text/plain text/css application/javascript application/pdf application/zip image/* audio/* video/*;
+
 
         # Serving images that stored on the server. This can also be done by static hosting
         location ~* ^/(image|data)/ {
