Adding nginx config for ubuntu server with only server block provited

--- a/proxy/nginx(docker & with ssl)/nginx_single_server.conf
+++ b/proxy/nginx(docker & with ssl)/nginx_single_server.conf
@@ -43,6 +43,14 @@ http {
     # Keep alive timeout for ssl certificate
     keepalive_timeout       75;       
 
+    # If 80 request redirect to 443
+    # Redirect to https if http
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name example.com;
+        return 301 https://example.com$request_uri;
+    }
 
     server {
         # Here default_server means this server will be selected if other not get selected.
