Adding simple loadbalancer config

--- a/loadbalancer/nginx/nginx.conf
+++ b/loadbalancer/nginx/nginx.conf
@@ -1,7 +1,12 @@
 # Here it is a single domain server. With no other sub domain.
 # Here domain => http://api.example.com  
 # Proxy Node server domain => http://localhost:5000
-
+# Load servers
+#           backend1.example.com
+#           backend2.example.com
+#           backend3.example.com
+#           backend4.example.com
+#           192.0.0.1
 
 # If 80 request redirect to 443
 # Redirect to https if http
