--- a/docker-compose/ssl-nginx-node-postgres/proxy/default.conf
+++ b/docker-compose/ssl-nginx-node-postgres/proxy/default.conf
@@ -35,7 +35,7 @@ server {
     }
 
     # Forward to a node server. 
-    location ~* ^/api/v1/ {
+    location / {
         proxy_pass          http://server:5000;
 
         # http_version by default is 1.0 but 1.1 will have keepalive connections.
