--- a/database/redis/docker-compose.yaml
+++ b/database/redis/docker-compose.yaml
@@ -1,9 +1,10 @@
 services:
   redis:
-    container_name: redis-stack-server
-    image: redis/redis-stack-server:latest
+    container_name: redis-stack
+    image: redis/redis-stack:latest
     ports:
       - 6379:6379
+      - 8001:8001
     restart: always
     volumes:
       - redisDataStack:/data
