--- a/database/mongo/docker-compose.yaml
+++ b/database/mongo/docker-compose.yaml
@@ -6,7 +6,9 @@ services:
       - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${ROOT_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${ROOT_PASSWORD}
+    volumes:
+      - mongoData:/data/db
 
   mongo-express:
     image: mongo-express
@@ -15,7 +17,10 @@ services:
       - 8081:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${ROOT_USERNAME}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${ROOT_USERNAME}
-      ME_CONFIG_MONGODB_URL: mongodb://${ROOT_USERNAME}:${ROOT_USERNAME}@mongo:27017/
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${ROOT_PASSWORD}
+      ME_CONFIG_MONGODB_URL: mongodb://${ROOT_USERNAME}:${ROOT_PASSWORD}@mongo:27017/
       ME_CONFIG_BASICAUTH: false
+
+volumes:
+  mongoData: {}
 
