--- a/database/postgres/docker-compose.yaml
+++ b/database/postgres/docker-compose.yaml
@@ -11,6 +11,18 @@ services:
     volumes:
       - postgresData:/var/lib/postgresql/data
 
+  pgadmin4:
+    image: elestio/pgadmin:latest
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${ADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${ADMIN_PASSWORD}
+      PGADMIN_LISTEN_PORT: 8080
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./servers.json:/pgadmin4/servers.json
+
 volumes:
   postgresData: {}
 
